<resources>

    <!-- <string name="app_name">SimpleClearMobile</string> -->
    <string name="app_name">CompactClearMobile</string>
    <string name="menu_settings">Settings</string>
    <!-- <string name="title_activity_main">Simple Clear Mobile</string> -->
    <string name="title_activity_main">Compact Clear Mobile</string>
    <string name="waybil">No. Waybill</string>
    <string name="simpan">Submit</string>
    <string name="keluar">Close</string>
    <string name="wbl">Courier`s Runsheet Waybill</string>
    <string name="wbl_list">Waybill List</string>
    <string name="assignment">Assignment</string>
    <string name="alfadigital">Alfadigital</string>
    <string name="ads">Alfamart Drop Store Waybill</string>
    <string name="pod">POD</string>
    <string name="dex">DEX</string>
    <string name="pup">Pickup</string>
    <string name="sip">SIP</string>
    <string name="GetPosition">Get Position</string>
    <string name="multi_pup">Multi PUP</string>
    <string name="pickup_booking">Pickup</string>
    <string name="assigment_po_outstanding">PO Outstanding</string>
    <string name="assigment_ads">ADS</string>
    <string name="assigment_awb_others">AWB Others</string>
    <string name="assigment_pod_or_dex">POD / DEX</string>
    <string name="signature">Get Signature</string>
    <string name="mnu">Main Menu</string>
    <string name="logout">Logout</string>
    <string name="sinkron">Syncronize</string>
    <string name="scd">Setor COD</string>
    <string name="pls_login">Please Login</string>
    <string name="external_dir">GetSignature</string>
    <string name="detaillistpickup">Detail List Pickup</string>
    
    <!-- String Assigment -->
    <string name="str_no_assigment">Nomor Assigment</string>
    <string name="str_status_assigment">Status</string>
    <string name="str_tanggal">Tanggal</string>
    
    <!-- String PO Outstanding -->
    <string name="str_no_po">Nomor PO</string>
    <string name="str_status_po">Status</string>
    <string name="str_cust">Cust</string>
    
    <!-- String ADS -->
    <string name="str_nama_toko">Nama Toko</string>
    <string name="str_awb_status">Status</string>
    <string name="str_awb_ads">Jumlah AWB</string>
    <string name="str_no_pass_code_ads">No.Pincode</string>
    
    <!-- String Detail ADS -->
    <string name="str_awb_ads_detail">No.AWB</string>
    <string name="str_status_ads_detail">Status</string>
    <string name="str_type_ads_detail">Type</string>
    <string name="str_kode_alfatrex_detail">Kode</string>
    <string name="str_kode_alfatrex_detail_2">Alfatrex</string>
    <string name="str_service">Service</string>
    
    <!-- String AWB Others -->
    <string name="str_nama_customer">Nama Customer</string>
    <string name="str_jumlah">Jumlah AWB</string>
    <string name="str_no_pass_code_awb_others">No.Pincode</string>
    
    <!-- String Detail AWB Others -->
    <string name="str_nomor_awb">Nomor AWB</string>
    <string name="str_status">Status</string>
    
    <!-- String POD / DEX -->
    <string name="str_awb_pod_dex">No.AWB</string>
    <string name="str_status_po_dex">Status</string>
    <string name="str_poddex_service">Service</string>
    <string name="str_nominal_cod_po_dex">Nominal</string>
    <string name="str_nominal_cod_po_dex_replace">Nominal Replace</string>
    
    <!-- String List Setor COD -->
    <string name="str_setorCOD_kode">Kode Setoran</string>
    <string name="str_setorCOD_tanggal">Tanggal</string>
    <string name="str_setorCOD_status">Status</string>
    <string name="str_setorCOD_totalNominal">Total Setoran</string>
    
    <!-- String Add List Setor COD -->
    <string name="str_addsetorCOD_waybill">No.Waybill</string>
    <string name="str_addsetorCOD_nominalSetoran">Nominal Setoran</string>
    
    <!-- String Footer -->
    <!-- <string name="footer_1">CLEAR MOBILE SYSTEM</string> -->
    <string name="footer_1">COMPACT CLEAR MOBILE SYSTEM</string>
    <string name="footer_2">Copyright © 2018 - IT ALFATREX</string>
    <string name="footer_3">All Rights Reserved</string>

    <!-- String Firebase -->
    <string name="registered">You can receive notification </string>
    <string name="un_register">You cannot receive notification</string>
     
</resources>