<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/background">

    <!-- <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:background="@color/background"> -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" >
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal" >
				<TextView
                    android:id="@+id/judul_no_assigment"
                    android:layout_marginRight="9dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="No.Assigment : " 
                    android:textColor="@color/font"/>
				<TextView
                    android:id="@+id/no_assigment"
                    android:layout_marginRight="9dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="TGRBOSPJ12345678" 
                    android:textColor="@color/font"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="18dp" >

                <Button
                    android:id="@+id/btnpo_outstanding"
                    style="@style/DashboardButton"
                    android:layout_marginLeft="9dp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/icon_po_outstanding_atrex"
                    android:text="@string/assigment_po_outstanding" />

                <Button
                    android:id="@+id/btnads"
                    style="@style/DashboardButton"
                    android:layout_marginLeft="9dp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/icon_ads_atrex"
                    android:text="@string/assigment_ads" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="18dp" >

                <Button
                    android:id="@+id/wblist_others"
                    style="@style/DashboardButton"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/icon_list_wb_atrex"
                    android:text="@string/assigment_awb_others" />

                <Button
                    android:id="@+id/btnpod_ord_dex"
                    style="@style/DashboardButton"
                    android:layout_marginLeft="9dp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/icon_pod_dex_atrex"
                    android:text="@string/assigment_pod_or_dex" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_marginBottom="27dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp" >

                <Button
                    android:id="@+id/btnscd"
                    style="@style/DashboardButton"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/icon_setor_atrex"
                    android:text="@string/scd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/footer_1" 
                    android:textColor="@color/font"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/footer_2" 
                    android:textColor="@color/font"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/footer_3" 
                    android:textColor="@color/font"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/showurl"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>
        </LinearLayout>
    <!-- </ScrollView> -->

</LinearLayout>
