<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <!-- Buka List ADS -->
	<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="380dp"
        android:layout_marginTop="10dp"
        android:background="@layout/card_background_frame"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/judul_nama_toko"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="115dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/cell_shape"
            android:singleLine="true"
            android:textSize="13sp"
            android:textColor="#333333"
            android:text="@string/str_nama_toko" />
        
        <TextView
            android:id="@+id/txt_status_convert"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="115dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/cell_shape"
            android:singleLine="true"
            android:textColor="#333333"
            android:text="status"
            android:visibility="gone"/>
        
        <TextView
            android:id="@+id/judul_status_awb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="130dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/cell_shape"
            android:singleLine="true"
            android:textSize="13sp"
            android:textColor="#333333"
            android:text="@string/str_awb_status" />

        <TextView
            android:id="@+id/judul_jumlah"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="180dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/cell_shape"
            android:singleLine="true"
            android:textSize="13sp"
            android:textColor="#333333"
            android:text="@string/str_awb_ads" />
        
        <TextView
            android:id="@+id/judul_no_pass_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="260dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/cell_shape"
            android:singleLine="true"
            android:textSize="13sp"
            android:textColor="#333333"
            android:text="@string/str_no_pass_code_ads" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:background="@layout/card_background_listview_isi"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <ListView
                android:id="@+id/listviews_ads"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            </ListView>
        </RelativeLayout>
    </RelativeLayout>
    <!-- Tutup List ADS -->
    
    <!-- Buka Button -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginTop="9dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnRefresh"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="Refresh" />

        <Button
            android:id="@+id/btnKeluar"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="Close" />
    </LinearLayout>
    <!-- Tutup Button -->
    
    <LinearLayout 
		android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
      	android:orientation="horizontal"
      	android:layout_gravity="center_horizontal">
		<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/footer_1"
        	android:textColor="@color/font"/>
	</LinearLayout>
	<LinearLayout 
		android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
      	android:orientation="horizontal"
      	android:layout_gravity="center_horizontal">
		<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/footer_2"
        	android:textColor="@color/font"/>
	</LinearLayout>
	<LinearLayout 
		android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
      	android:orientation="horizontal"
      	android:layout_gravity="center_horizontal">
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/footer_3"
        	android:textColor="@color/font"/>
    </LinearLayout>

</LinearLayout>
